--- a/style.html
+++ b/style.html
@@ -6,14 +6,15 @@
     <title>Romans Zoo Guide</title>
     <style>
         
-        h1, h2, h3, h4, h5, h6 {
+        
+        h1, h2, h3, h4, h5, h6 /*Font Color Changes*/ { 
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bold;
-            color: #333;
+            color: #333; 
         }
 
         h1 {
-            background: linear-gradient(to right, #0b1e33, #63b5f6);
+            background: linear-gradient(to right, #0b1e33, #63b5f6); /*Font Texture*/
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             display: inline-block;
@@ -39,7 +40,7 @@
             transition: transform 0.3s ease-in-out;
         }
 
-        h2:hover::after {
+        h2:hover::after /*Cool underline Feature*/ {
             transform: scaleX(1);
         }
 
@@ -60,14 +61,14 @@
     <main>
         <article>
             <section>
-                <h2>Bears</h2>
+                <h2>Bears</h2> 
                 <img src="https://plus.unsplash.com/premium_photo-1661963661518-5d1e2f4d8b81?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGJlYXJ8ZW58MHx8MHx8fDA%3D" alt="Bear Image">
                 <ul>
                     <li>Ollie</li>
                     <li>Mona</li>
                 </ul>
                 <p>Bears are large mammals known for their strength and adaptability. They require spacious enclosures with opportunities for climbing and foraging.</p>
-                <a href="https://en.wikipedia.org/wiki/Bear" target="_blank">Learn more about Bears</a>
+                <a href="https://en.wikipedia.org/wiki/Bear" target="_blank">Learn more about Bears</a> <!-- Addition of tab creation-->
             </section>
 
             <section>
@@ -118,7 +119,7 @@
         </article>
     </main>
 
-    <footer>
+    <footer> <!-- Added copyright infrigment tool -->
         <p>&copy; 2025 Romans Wild Zoo Guide</p>
     </footer>
 </body>
